K8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uber-backend
  namespace: uber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: uber
      labels:
        app: backend
    spec:
      containers:
      - name: uber-backend
        image: jayant2005/backend-uber:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      restartPolicy: Always
