K8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uber-frontend
  namespace: uber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: uber
      labels:
        app: frontend
    spec:
      containers:
      - name: uber-frontend
        image: jayant2005/frontend-uber:latest 
        ports:
        - containerPort: 5173
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
