K8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: uber
spec:
  selector:
    app: backend
  ports:
  - port: 4000
    targetPort: 4000
