K8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: uber
spec:
  selector:
    app: frontend
  ports:
  - port: 5173
    targetPort: 5173
