K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uber-ingress
  namespace: uber
  labels:
    name: uber-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: uber.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 5173
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend-service
            port: 
              number: 4000
